--- a/entregaFinal/Makefile
+++ b/entregaFinal/Makefile
@@ -13,13 +13,13 @@ all : $(BIN)/pruebaConjunto  clean
 # Objetos
 
 $(OBJ)/pruebaConjunto.o : $(SRC)/pruebaConjunto.cpp
-	g++ -c -o $(OBJ)/pruebaConjuntoFinal.o $(SRC)/pruebaConjuntoFinal.cpp -I$(INCLUDE)
+	g++ -c -o $(OBJ)/pruebaConjuntoFinal.o $(SRC)/pruebaConjuntoFinal.cpp -I$(INCLUDE) -std=c++14
 
 $(OBJ)/ConjuntoParticulas.o : $(SRC)/ConjuntoParticulas.cpp 
-	g++ -c -o $(OBJ)/ConjuntoParticulas.o $(SRC)/ConjuntoParticulas.cpp -I$(INCLUDE)
+	g++ -c -o $(OBJ)/ConjuntoParticulas.o $(SRC)/ConjuntoParticulas.cpp -I$(INCLUDE) -std=c++14
 
 $(OBJ)/Particula.o : $(SRC)/Particula.cpp
-	g++ -c -o $(OBJ)/Particula.o $(SRC)/Particula.cpp -I$(INCLUDE)
+	g++ -c -o $(OBJ)/Particula.o $(SRC)/Particula.cpp -I$(INCLUDE) -std=c++14
 
 	
 # Ejecutable
